; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmware/pvscsi/extr_pvscsi.c_pvscsi_setup_msg_ring.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmware/pvscsi/extr_pvscsi.c_pvscsi_setup_msg_ring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pvscsi_softc = type { i64, i32*, i32 }
%struct.pvscsi_cmd_desc_setup_msg_ring = type { i64, i32* }

@.str = private unnamed_addr constant [22 x i8] c"msg is not being used\00", align 1
@PVSCSI_CMD_SETUP_MSG_RING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pvscsi_softc*)* @pvscsi_setup_msg_ring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pvscsi_setup_msg_ring(%struct.pvscsi_softc* %0) #0 {
  %2 = alloca %struct.pvscsi_softc*, align 8
  %3 = alloca %struct.pvscsi_cmd_desc_setup_msg_ring, align 8
  %4 = alloca i64, align 8
  store %struct.pvscsi_softc* %0, %struct.pvscsi_softc** %2, align 8
  %5 = load %struct.pvscsi_softc*, %struct.pvscsi_softc** %2, align 8
  %6 = getelementptr inbounds %struct.pvscsi_softc, %struct.pvscsi_softc* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 8
  %8 = call i32 @KASSERT(i32 %7, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @bzero(%struct.pvscsi_cmd_desc_setup_msg_ring* %3, i32 16)
  %10 = load %struct.pvscsi_softc*, %struct.pvscsi_softc** %2, align 8
  %11 = getelementptr inbounds %struct.pvscsi_softc, %struct.pvscsi_softc* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = getelementptr inbounds %struct.pvscsi_cmd_desc_setup_msg_ring, %struct.pvscsi_cmd_desc_setup_msg_ring* %3, i32 0, i32 0
  store i64 %12, i64* %13, align 8
  store i64 0, i64* %4, align 8
  br label %14

14:                                               ; preds = %31, %1
  %15 = load i64, i64* %4, align 8
  %16 = load %struct.pvscsi_softc*, %struct.pvscsi_softc** %2, align 8
  %17 = getelementptr inbounds %struct.pvscsi_softc, %struct.pvscsi_softc* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ult i64 %15, %18
  br i1 %19, label %20, label %34

20:                                               ; preds = %14
  %21 = load %struct.pvscsi_softc*, %struct.pvscsi_softc** %2, align 8
  %22 = getelementptr inbounds %struct.pvscsi_softc, %struct.pvscsi_softc* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  %24 = load i64, i64* %4, align 8
  %25 = getelementptr inbounds i32, i32* %23, i64 %24
  %26 = load i32, i32* %25, align 4
  %27 = getelementptr inbounds %struct.pvscsi_cmd_desc_setup_msg_ring, %struct.pvscsi_cmd_desc_setup_msg_ring* %3, i32 0, i32 1
  %28 = load i32*, i32** %27, align 8
  %29 = load i64, i64* %4, align 8
  %30 = getelementptr inbounds i32, i32* %28, i64 %29
  store i32 %26, i32* %30, align 4
  br label %31

31:                                               ; preds = %20
  %32 = load i64, i64* %4, align 8
  %33 = add i64 %32, 1
  store i64 %33, i64* %4, align 8
  br label %14

34:                                               ; preds = %14
  %35 = load %struct.pvscsi_softc*, %struct.pvscsi_softc** %2, align 8
  %36 = load i32, i32* @PVSCSI_CMD_SETUP_MSG_RING, align 4
  %37 = call i32 @pvscsi_write_cmd(%struct.pvscsi_softc* %35, i32 %36, %struct.pvscsi_cmd_desc_setup_msg_ring* %3, i32 16)
  ret void
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @bzero(%struct.pvscsi_cmd_desc_setup_msg_ring*, i32) #1

declare dso_local i32 @pvscsi_write_cmd(%struct.pvscsi_softc*, i32, %struct.pvscsi_cmd_desc_setup_msg_ring*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
